--- a/ams1html.html
+++ b/ams1html.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>bóng đá</title>
+    <link rel="stylesheet" href="scc/app.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100;1,300;1,400&family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1><b>Tuyển Việt Nam thắng nhọc U22 Việt Nam</b></h1>
+<h1>style "color=red" <b>Tuyển Việt Nam thắng nhọc U22 Việt Nam</b></h1>
 <p>
     QUẢNG NINHĐức Chinh ghi bàn quyết định giúp tuyển Việt Nam thắng U22 Việt Nam 3-2, trong trận giao hữu tối 23/12.
 </p>
@@ -93,5 +96,10 @@
         (Văn Việt 1999 72), Hữu Thắng (Văn Hiếu 63) - Văn Đạt (Minh Bình 63), Việt Cường (Xuân Quyết 72), Xuân Tú (Thanh Minh 63)<br>
 
         <b> Quang Dũng - Xuân Bình</b></p>
+    <style>
+        a{
+            color: blue;
+        }
+        <style>
 </body
 </html>
