--- a/ams1html.html
+++ b/ams1html.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100;1,300;1,400&family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>style "color=red" <b>Tuyển Việt Nam thắng nhọc U22 Việt Nam</b></h1>
+<h1> <b>Tuyển Việt Nam thắng nhọc U22 Việt Nam</b></h1>
 <p>
     QUẢNG NINHĐức Chinh ghi bàn quyết định giúp tuyển Việt Nam thắng U22 Việt Nam 3-2, trong trận giao hữu tối 23/12.
 </p>
