--- a/lad2 html.html
+++ b/lad2 html.html
@@ -22,10 +22,10 @@ tôi cũng có khả năng sửa chữa 1 số thiết bị văn phòng,<br
 <hr color="purple" >
 <h3>chứng chỉ</h3>
 <p>
-    bằng cấp 1,2,3<br>
-    chứng chỉ tiếng hàn<br>
-    chứng chỉ tin học<br>
-    chứng chỉ điện<br>
+    <b>bằng cấp 1,2,3</b><br>
+    <b>chứng chỉ tiếng hàn</b>b><br>
+    <b>chứng chỉ tin học</b><br>
+    <b>chứng chỉ điện</b><br>
 </p>
 <hr color="purple" >
 <h3>ngôn ngữ</h3>
@@ -35,7 +35,7 @@ tôi cũng có khả năng sửa chữa 1 số thiết bị văn phòng,<br
 </p>
 <hr color="purple" >
 <h3>khác</h3>
-<p>ngoài sự đẹp trai ra thì tôi không có gì nổi trội<br<</p>
+<p>ngoài sự <i>đẹp trai</i> ra thì tôi không có gì nổi trội<br<</p>
 <hr color="purple" >
 <h3>ưu điểm</h3>
 <p>
